Added unit tests, and reading config from application.properties

--- a/stock-market/pom.xml
+++ b/stock-market/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>tomcat-embed-jasper</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
     </dependencies>  
     <properties>  
     	<java.version>1.8</java.version>  
