--- a/stock-market/src/main/resources/application.properties
+++ b/stock-market/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 logging.file = /tmp/logs/stockmarket.log
 spring.mvc.view.prefix: /
 spring.mvc.view.suffix: .jsp
+config.stockCount: 8
+config.stockNameLength: 8
+config.maxStockPrice: 100
+config.allowedcharsinstockname: ABCDEFGHIJKLMNOPQRSTUVWXYZ
