Changed default port to 7777

--- a/stock-market/src/main/resources/application.properties
+++ b/stock-market/src/main/resources/application.properties
@@ -5,3 +5,4 @@ config.stockCount: 8
 config.stockNameLength: 8
 config.maxStockPrice: 100
 config.allowedcharsinstockname: ABCDEFGHIJKLMNOPQRSTUVWXYZ
+server.port = 7777
